на основе шаблонов создана бд и тестовые пользователи

--- a/backend/Backend/WebApi/appsettings.json
+++ b/backend/Backend/WebApi/appsettings.json
@@ -19,5 +19,10 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=WebApi1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
+  
 }
