--- a/backend/Backend/WebApi/appsettings.json
+++ b/backend/Backend/WebApi/appsettings.json
@@ -21,7 +21,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=WebApi1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "server=localhost;user=root;password=11111111;database=WebApi1;"
   },
   "AllowedHosts": "*"
   
