Переделал миграции под провайдера MySQL

--- a/backend/Backend/WebApi/WebApi.csproj
+++ b/backend/Backend/WebApi/WebApi.csproj
@@ -42,4 +42,8 @@
     <ProjectReference Include="..\DataBase\DataBase.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
 </Project>
